fix: Countdown yellow when dark mode is enabled. Cache time decreased to get next game properly

--- a/src/style.css
+++ b/src/style.css
@@ -559,6 +559,10 @@ svg.video-icon {
   letter-spacing: 0.3px;
 }
 
+body.dark .next-game-countdown {
+  color: #ffee03;
+}
+
 /* Live games */
 #live-games-list {
   margin-bottom: 8px;
